files/nginx_k8s/stack.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-volume
            mountPath: /etc/nginx/conf.d
            readOnly: true
          - name: files-volume
            mountPath: /home/sorend/public_html
            readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: web-config
        - name: files-volume
          hostPath:
            path: /home/sorend/public_html
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: web-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: venkatadri.cs.svu-ac.in
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
  - host: www.cs.svu-ac.in
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
  - host: cs.svu-ac.in
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
  - host: www.svu-ac.in
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
  - host: svu-ac.in
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
